--- a/package.json
+++ b/package.json
@@ -21,6 +21,6 @@
   "homepage": "https://github.com/low0621/training2#readme",
   "dependencies": {
     "colors": "^1.1.2",
-    "momentjs": "^1.1.15"
+    "moment": "^2.15.0"
   }
 }
